update src to support signum. (copied from old account)

--- a/src/main/resources/templates/index_en.properties
+++ b/src/main/resources/templates/index_en.properties
@@ -1,52 +1,53 @@
-# english
+# fallback / default
 
-faucet.title=Burstcoin Faucet - Claim your free Burstcoins within seconds.
+faucet.title=Signum Faucet - Claim your free Signas within seconds.
 
-faucet.form.title=Burstcoin Faucet
-faucet.form.account.label=Your Burstcoin account
+faucet.form.title=Signa Faucet
+faucet.form.account.label=Your Signum account
 faucet.form.account.notice=Do NOT enter your PASSPHRASE here!
 faucet.form.account.placeholder='Account ID' or 'Numeric Account ID'
-faucet.form.button.claim=Claim Burst
+faucet.form.button.claim=Claim SIGNA
 
 # thanks for your support and not changing this
-faucet.link.url=https://github.com/de-luxe/burstcoin-faucet/releases
+faucet.link.url=https://explorer.signumpool.com/address/13482861579450461127
 # {0} Faucet accountId, {1} Faucet account balance
-faucet.link.text={0} - {1} BURST
+faucet.link.text=Faucet balance: {1} SIGNA
 
 faucet.stats.donations.title=Donations
 # {0} Total donated BURST amount, {1} Total number of donating accounts
-faucet.stats.donations.summary=Faucet received {0} BURST from {1} accounts.
+faucet.stats.donations.summary=Faucet received {0} SIGNA from {1} accounts.
 # {0} Donating accountId, {1} BURST amount donated
-faucet.stats.donations.account={0} - {1} BURST
+faucet.stats.donations.account={0} - {1} SIGNA
 # {0} BURST amount donated from other accounts
-faucet.stats.donations.other=Other accounts - {0} BURST
+faucet.stats.donations.other=Other accounts - {0} SIGNA
 
 faucet.stats.claims.title=Claims
 # {0} Total claimed BURST amount, {1} Total number of claiming accounts
-faucet.stats.claims.summary=Faucet sent {0} BURST to {1} accounts.
+faucet.stats.claims.summary=Faucet sent {0} SIGNA to {1} accounts.
 # {0} Number of claims, {1} Claiming accountId, {2} BURST amount claimed
-faucet.stats.claims.account={0}x {1} - {2} BURST
+faucet.stats.claims.account={0}x {1} - {2} SIGNA
 
 # {0} BURST amount send, {1} target accountId
-faucet.msg.send.money={0} BURST sent to {1}
+faucet.msg.send.money={0} SIGNA sent to {1}
 
 # faucet has not enough funds
-faucet.error.noFunds=Faucet has run dry, claim BURST is currently not possible. Donations to below accountId are welcome!
+faucet.error.noFunds=Faucet has run dry, claim SIGNA is currently not possible. Donations to below accountId are welcome!
 
 # {0} Malformed BURST accountId
-faucet.error.accountId.malformed=Please enter your BURST 'Account ID' or 'Numeric Account ID'! ''{0}'' is not valid!
+faucet.error.accountId.malformed=Please enter your SIGNA 'Account ID' or 'Numeric Account ID'! ''{0}'' is not valid!
 # {0} BURST numericAccountId not able to rs convert
-faucet.error.accountId.rsConvert=Please enter your BURST 'Account ID' or 'Numeric Account ID'! ''{0}'' is not valid!
+faucet.error.accountId.rsConvert=Please enter your SIGNA 'Account ID' or 'Numeric Account ID'! ''{0}'' is not valid!
 # {0} BURST accountId with wrong alphabet
-faucet.error.accountId.alphabet=Please enter your BURST 'Account ID' or 'Numeric Account ID'! ''{0}'' is not valid!
+faucet.error.accountId.alphabet=Please enter your SIGNA 'Account ID' or 'Numeric Account ID'! ''{0}'' is not valid!
 
 faucet.error.claim.reCaptcha=Please confirm that you are not a robot.
 # {0} time to wait in minutes, until account expired
-faucet.error.claim.denied.account=No BURST sent. Please wait at least {0} minutes before claiming again.
+faucet.error.claim.denied.account=No SIGNA sent. Please wait at least {0} minutes before claiming again.
 # {0} time to wait in minutes, until ip expired
-faucet.error.claim.denied.ip=No BURST sent. Please wait at least {0} minutes before claiming again.
+faucet.error.claim.denied.ip=No SIGNA sent. Please wait at least {0} minutes before claiming again.
 # {0} time to wait in minutes, until cookie expired
-faucet.error.claim.denied.cookie=No BURST sent. Please wait at least {0} minutes before claiming again.
-faucet.error.claim.walletAccess=Sorry, faucet could not access wallet in order to send your BURST. Please try again later.
+faucet.error.claim.denied.cookie=No SIGNA sent. Please wait at least {0} minutes before claiming again.
+faucet.error.claim.walletAccess=Sorry, faucet could not access wallet in order to send your SIGNA. Please try again later.
 # {0} numberOfClaims allowed
-faucet.error.claim.denied.numberOfClaims=Every account is only allowed to claim BURST {0} times by this faucet.
+faucet.error.claim.denied.numberOfClaims=Every account is only allowed to claim SIGNA {0} times by this faucet.
+
